--- a/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
+++ b/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
@@ -13,15 +13,15 @@ input.searchInput{
     border:none;
     box-sizing: border-box;
     padding-left:10px;
-    font-family: 'Roboto', cursive;
+    font-family: 'Inter', cursive;
     font-weight: bold;
-    font-size: 1.1em;
+    font-size: 1em;
     color: rgb(20,20,80);
     box-shadow: 0 10px 20px -10px rgba(0,0,100,0.25);
 }
 
 .tempSearch {
-    width:190px;
+    width:210px;
     max-height:150px;
     padding-bottom:30px;
     overflow: auto;
@@ -114,7 +114,7 @@ input.searchInput{
 .searchResultPhono {
     color: tomato;
     font-weight: bold;
-    font-family: 'Roboto', cursive;
+    font-family: 'Inter', cursive;
 }
 
 .searchResultPhono span {
@@ -123,7 +123,7 @@ input.searchInput{
 }
 
 .searchResultWord{
-    font-family: 'Roboto', cursive;
+    font-family: 'Inter', cursive;
     color: var(--blue0);
     font-weight: bold;
 }
