--- a/reactversion/source2/src/containers/css/App.css
+++ b/reactversion/source2/src/containers/css/App.css
@@ -44,9 +44,9 @@ a.touchWriterLink{
   text-align: center; 
   border-radius:100%;
   font-size:0.6em;
-  font-family: 'Roboto', cursive;
+  font-family: 'Inter', cursive;
   font-weight:bold;
-  box-shadow: 0 5px 10px -5px rgba(19,55,104,.75);
+  box-shadow: 0 5px 10px -5px var(--blue0);
   transition: all 0.2s ease-in-out;
 }
 
