--- a/reactversion/think/src/components/css/LandingPage.css
+++ b/reactversion/think/src/components/css/LandingPage.css
@@ -2,7 +2,7 @@
     display: grid;
     height:100vh;
     width:100vw;
-    grid-template-columns: repeat(2, 61.8vw auto);
+    grid-template-columns: 61.8vw auto;
     background: radial-gradient(at top, white, transparent);
 }
 
@@ -13,9 +13,8 @@
 }
 
 .landingLeftLogoWrapper{
-    display: inline-block;
+    display: block;
     position: absolute;
-    width:300px;
     left:50%;
     top:50%;
     transform: translate(30%,-50%);
@@ -29,8 +28,29 @@ p.motto{
     padding-left:2px;
 }
 
-@media (max-width:1100px) {
+.landingRight{
+    height:100%;
+    width:100%;
+    display: grid;
+    align-items:center;
+    justify-items:center;
+}
+
+@media (max-width: 750px) {
     .landingLeftLogoWrapper{
-        transform: translate(-20%,-50%);
+        transform: translate(-80%,-50%);
+    }
+    .landingPage{
+        display: block;
+        height:61.8vh;
+        width:100%;
+    }
+    .landingLeft{
+        width:100%;
+        height:100%;
+    }
+    .landingRight{
+        width:100%;
+        height:38.2vh;
     }
 }
