--- a/reactversion/source2/src/css/Post.css
+++ b/reactversion/source2/src/css/Post.css
@@ -20,18 +20,34 @@
     padding-left:12px;
     font-weight:bold;
     color: var(--blue0);
+    cursor: pointer;
 }
 
 .post-fractal{
     height:30px;
     width:30px;
     margin-right:20px;
+    animation: post-fractal-rotate 3s infinite;
+}
+
+@keyframes post-fractal-rotate{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.post-date {
+    text-align: right;
+    font-size: 0.7em;
+    font-weight: bold;
+    color: grey;
 }
 
 .post-idea{
     margin-top:12px;
     color: var(--blue0);
     text-indent: 18px;
+    white-space: pre-wrap;
 }
 
 .post-idea::first-letter{
@@ -43,4 +59,20 @@
     font-weight:bold;
     color: var(--blue3);
     font-family: 'Megrim', cursive;
+}
+
+.post-reduce{
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 12px 12px 12px;
+    border-color: transparent transparent var(--blue2) transparent;
+    cursor: pointer;
+}
+
+@media (max-width: 700px) {
+    .post-idea{
+        font-size: 0.85em;
+    }
 }
