--- a/reactversion/source3/src/components/css/SearchBar.css
+++ b/reactversion/source3/src/components/css/SearchBar.css
@@ -76,12 +76,17 @@ input.searchInput{
     transform: translateX(-50%);
     background: white;
     border-radius:12px;
-    width:200px;
+    width:250px;
     box-sizing: border-box;
     padding-bottom:20px;
     padding-top:10px;
     box-shadow: 0 20px 40px -20px rgba(0,0,100,0.35);
     z-index:100;
+}
+
+.three-results{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
 }
 
 .quitResult{
