--- a/reactversion/source3/src/components/css/Button.css
+++ b/reactversion/source3/src/components/css/Button.css
@@ -10,6 +10,8 @@ button.menu-button-landing{
     justify-items:center;
     height:100%;
     width:100%;
+    max-height:120px;
+    max-width:120px;
 }
 
 button.menu-button{
